--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,7 +1,10 @@
 <div id="landing">
   <div class="landing-title">
+    <img class="img-responsive" src="assets/img/SFG_logo.png" alt="logo" width="10%" />
     <h1>Hi, I&#39;m
-      <span class="highlight-title">{{site.username}}</span>,
+    </h1>
+    <h1>
+      <span class="highlight-title">{{site.username}}</span>
     </h1>
     <h1>
       <span id="txt-rotate" data-period="2000"
