--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,12 @@
       Github Pages
     </a>
   </p>
+  <p>
+    SFG logo by 
+    <a class="highlight-link" href="https://www.linkedin.com/in/tamas-fergencs/" target="_blank" rel="noreferrer">
+      Tamás Fergencs
+    </a>
+  </p>
 </footer>
 
 <!-- Google Analytics -->
