--- a/_includes/section-projects.html
+++ b/_includes/section-projects.html
@@ -1,16 +1,59 @@
 {% if site.show_projects %}
-  <h1 class="title"><span>{{site.projects_title}}</span></h1>
+  <h1 class="title"><span>{{site.projects_work_title}}</span></h1>
   <div class="projects-wrapper">
-    {% for project in site.data.projects %}
+    {% for project in site.data.projects_work %}
       <div class="project neumorphism-card" data-aos="zoom-in-down">
         <div class="name-link-wrapper">
           <h3>{{project.name}}</h3>
         </div>
         <p class="project-desc">{{project.descr}}</p>
+        {% if project.site %}
+          <a class="highlight-link" href="{{project.site}}" target="_blank" rel="noreferrer">
+            Site
+          </a>
+        {% endif %}
+        {% if project.github %}
+          <a class="highlight-link" href="{{project.github}}" target="_blank" rel="noreferrer">
+            Github
+          </a>
+        {% endif %}
         {% if project.demo %}
           <a class="highlight-link" href="{{project.demo}}" target="_blank" rel="noreferrer">
             Demo
           </a>
+        {% endif %}
+        {% if project.tags %}
+          <div class="tag-wrapper">
+            {% for tag in project.tags %}
+              <span class="tag neumorphism-card">{{tag.tag}}</span>
+            {% endfor %}
+          </div>
+        {% endif %}
+      </div>
+    {% endfor %}
+  </div>
+  <h1 class="title"><span>{{site.projects_hobby_title}}</span></h1>
+  <div class="projects-wrapper">
+    {% for project in site.data.projects_hobby %}
+      <div class="project neumorphism-card" data-aos="zoom-in-down">
+        <div class="name-link-wrapper">
+          <h3>{{project.name}}</h3>
+        </div>
+        <p class="project-desc">{{project.descr}}</p>
+        {% if project.site %}
+        <a class="highlight-link" href="{{project.site}}" target="_blank" rel="noreferrer">
+          Site
+        </a>
+        {% endif %}
+        {% if project.github %}
+          <a class="highlight-link" href="{{project.github}}" target="_blank" rel="noreferrer">
+            Github
+          </a>
+        {% endif %}
+        {% if project.demo %}
+        <a class="highlight-link" href="{{project.demo}}" target="_blank" rel="noreferrer">
+          Demo
+        </a>
         {% endif %}
         {% if project.tags %}
           <div class="tag-wrapper">
