--- a/_includes/section-projects.html
+++ b/_includes/section-projects.html
@@ -22,6 +22,11 @@
             Demo
           </a>
         {% endif %}
+        {% if project.site %}
+          <a class="highlight-link" href="{{project.site}}" target="_blank" rel="noreferrer">
+            Site
+          </a>
+        {% endif %}
         {% if project.tags %}
           <div class="tag-wrapper">
             {% for tag in project.tags %}
